--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    grid-gap: 12px;
 }
 
 .playground {
